--- a/oopslaoq/StrategyPattern.csproj
+++ b/oopslaoq/StrategyPattern.csproj
@@ -43,20 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComerComidaAnimada.cs" />
-    <Compile Include="ComerNãoComer.cs" />
-    <Compile Include="ComerRação.cs" />
-    <Compile Include="IComer.cs" />
-    <Compile Include="IVoar.cs" />
-    <Compile Include="Marreco.cs" />
-    <Compile Include="VoarNaoVoa.cs" />
-    <Compile Include="Pato.cs" />
-    <Compile Include="PatoAnimado.cs" />
-    <Compile Include="PatoDeBorracha.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Itens\ComerComidaAnimada.cs" />
+    <Compile Include="Itens\ComerNãoComer.cs" />
+    <Compile Include="Itens\ComerRação.cs" />
+    <Compile Include="Itens\IComer.cs" />
+    <Compile Include="Itens\IVoar.cs" />
+    <Compile Include="Itens\Marreco.cs" />
+    <Compile Include="Itens\VoarNaoVoa.cs" />
+    <Compile Include="Itens\Pato.cs" />
+    <Compile Include="Itens\PatoAnimado.cs" />
+    <Compile Include="Itens\PatoDeBorracha.cs" />
+    <Compile Include="Itens\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VoarAsa.cs" />
-    <Compile Include="VoarAvião.cs" />
+    <Compile Include="Itens\VoarAsa.cs" />
+    <Compile Include="Itens\VoarAvião.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
